--- a/index.html
+++ b/index.html
@@ -7,15 +7,8 @@
 		<title>备课系统</title>
 		<meta name="description" content="Opinionated Vite Starter Template" />
 	</head>
-	<body class="font-sans dark:text-white dark:bg-hex-121212">
+	<body>
 		<div id="app"></div>
-		<script>
-			;(function () {
-				const prefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches
-				const setting = localStorage.getItem('vueuse-color-scheme') || 'auto'
-				if (setting === 'dark' || (prefersDark && setting !== 'light')) document.documentElement.classList.toggle('dark', true)
-			})()
-		</script>
 		<script type="module" src="/src/main.ts"></script>
 	</body>
 </html>
